syntax = "proto3";
import "google/protobuf/empty.proto";

package todo;

service TodoService {
  rpc createTodo (CreateTodo) returns (Todo) {}
  rpc getTodos (GetTodo) returns (stream Todo) {}
  rpc deleteTodo (DeleteTodo) returns (google.protobuf.Empty) {}
  rpc updateTodo (UpdateTodo) returns (Todo) {}
}

message Todo {
  string id = 1;
  string userId = 2;
  string title = 3;
  string content = 4;
  int64 updatedAt = 5;
  int64 createdAt = 6;
}

message CreateTodo {
  string userId = 1;
  string title = 2;
  string content = 3;
}

message UpdateTodo {
  string id = 1;
  string title = 2;
  string content = 3;
}

message GetTodo {
  string userId = 1;
}

message DeleteTodo {
  string id = 1;
}
